--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "streamifier": "^0.1.1"
   }
 }
